[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/questie/editor/quest_editor/workspace/quest_designer/blocks/base_block.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/questie/editor/icons/boxes_32x32.png" type="Texture" id=2]
[ext_resource path="res://addons/questie/editor/icons/tag.png" type="Texture" id=3]
[ext_resource path="res://addons/questie/editor/quest_editor/workspace/quest_designer/blocks/tasks/collect.gd" type="Script" id=4]

[node name="CollectTask" instance=ExtResource( 1 )]
title = "Collect Item Quantity"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 3
slot/0/right_color = Color( 0.12549, 0.905882, 0.905882, 1 )
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="." index="0"]
margin_left = 16.0
margin_top = 24.0
margin_right = 364.0
margin_bottom = 74.0
size_flags_vertical = 3
alignment = 1

[node name="CategoryMenu" type="MenuButton" parent="HBoxContainer" index="0"]
margin_right = 145.0
margin_bottom = 50.0
text = "Select Category"
icon = ExtResource( 3 )

[node name="ItemMenu" type="MenuButton" parent="HBoxContainer" index="1"]
margin_left = 149.0
margin_right = 270.0
margin_bottom = 50.0
focus_mode = 2
text = "Select Item"
icon = ExtResource( 2 )

[node name="QuantitySpin" type="SpinBox" parent="HBoxContainer" index="2"]
margin_left = 274.0
margin_top = 13.0
margin_right = 348.0
margin_bottom = 37.0
size_flags_vertical = 4
min_value = 1.0
max_value = 10000.0
value = 1.0
rounded = true
